--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,14 @@ header > nav {
   box-shadow: 0 15px 30px -15px rgb(0 0 0 / 30%);
   padding: 20px 30px;
 }
-
+/* logo */
 header > nav > .logo a {
   font-size: 24px;
   color: var(--primary-color);
   font-weight: 700;
   font-family: var(--primary-font);
 }
-
+/* menu */
 header > nav > .menu li {
   list-style: none;
 }
@@ -66,6 +66,11 @@ header > nav > .menu a:hover {
   color: var(--primary-color);
   transition: 0.4s;
 }
+.menu > ul {
+    display: grid;
+    grid-template-columns:repeat(5, 1fr) ;
+}
+/* slogan */
 .slogan > h1 {
   font-family: var(--primary-font);
   color: white;
